--- a/src/ui/gameover-pain.fxml
+++ b/src/ui/gameover-pain.fxml
@@ -1,16 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
-      <ImageView fitHeight="705.0" fitWidth="552.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="552.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ImageView fitHeight="705.0" fitWidth="559.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../Escritorio/Universidad/Tercer%20Semestre/APO%202/Space%20invaders/fondito.png" />
          </image>
       </ImageView>
-   </center>
-</BorderPane>
+      <ImageView fitHeight="956.0" fitWidth="1458.0" layoutX="-453.0" layoutY="-250.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../Escritorio/Universidad/Tercer%20Semestre/APO%202/Space%20invaders/GameLuis.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="201.0" layoutY="242.0" text="Score:" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="31.0" />
+         </font>
+      </Label>
+      <Label layoutX="297.0" layoutY="245.0" text="000" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="31.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="523.0" fitWidth="896.0" layoutX="-172.0" layoutY="89.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../Escritorio/Universidad/Tercer%20Semestre/APO%202/Space%20invaders/oli.png" />
+         </image>
+      </ImageView>
+      <TextField layoutX="126.0" layoutY="367.0" prefHeight="30.0" prefWidth="301.0" style="-fx-background-radius: 10;" />
+      <Button layoutX="203.0" layoutY="434.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="146.0" style="-fx-background-radius: 15; -fx-background-color: black; -fx-border-color: white; -fx-border-radius: 15;" text="GUARDAR" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="19.0" />
+         </font>
+      </Button>
+   </children>
+</Pane>
