--- a/src/ui/gameover-pain.fxml
+++ b/src/ui/gameover-pain.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -7,7 +8,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="552.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -37,10 +37,13 @@
          </image>
       </ImageView>
       <TextField layoutX="126.0" layoutY="367.0" prefHeight="30.0" prefWidth="301.0" style="-fx-background-radius: 10;" />
-      <Button layoutX="203.0" layoutY="434.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="146.0" style="-fx-background-radius: 15; -fx-background-color: black; -fx-border-color: white; -fx-border-radius: 15;" text="GUARDAR" textFill="WHITE">
+      <Button fx:id="save" layoutX="203.0" layoutY="434.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="146.0" style="-fx-background-radius: 15; -fx-background-color: black; -fx-border-color: white; -fx-border-radius: 15;" text="GUARDAR" textFill="#57cbab">
          <font>
             <Font name="System Bold" size="19.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
    </children>
 </Pane>
