--- a/src/ui/startGame.fxml
+++ b/src/ui/startGame.fxml
@@ -7,8 +7,8 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="552.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="717.0" fitWidth="562.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="487.0" fitWidth="754.0" layoutX="-44.0" layoutY="-130.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="paneStart" fitHeight="717.0" fitWidth="562.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="lblStart" fitHeight="487.0" fitWidth="754.0" layoutX="-44.0" layoutY="-130.0" pickOnBounds="true" preserveRatio="true" />
       <Button layoutX="161.0" layoutY="353.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="240.0" style="-fx-background-color: black;" text="Scores" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="25.0" />
