The action event has been added

--- a/src/ui/gameover-pain.fxml
+++ b/src/ui/gameover-pain.fxml
@@ -10,7 +10,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="552.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fx:id="background" fitHeight="705.0" fitWidth="559.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="backGround" fitHeight="705.0" fitWidth="559.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="gameOver" fitHeight="956.0" fitWidth="1458.0" layoutX="-453.0" layoutY="-250.0" pickOnBounds="true" preserveRatio="true" />
       <Label layoutX="201.0" layoutY="242.0" text="Score:" textFill="WHITE">
          <font>
@@ -23,8 +23,8 @@
          </font>
       </Label>
       <ImageView fx:id="insertName" fitHeight="523.0" fitWidth="896.0" layoutX="-172.0" layoutY="89.0" pickOnBounds="true" preserveRatio="true" />
-      <TextField layoutX="126.0" layoutY="367.0" prefHeight="30.0" prefWidth="301.0" style="-fx-background-radius: 10;" />
-      <Button fx:id="save" layoutX="203.0" layoutY="434.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="146.0" style="-fx-background-radius: 15; -fx-background-color: black; -fx-border-color: white; -fx-border-radius: 15;" text="GUARDAR" textFill="#57cbab">
+      <TextField fx:id="nickName" layoutX="126.0" layoutY="367.0" prefHeight="30.0" prefWidth="301.0" style="-fx-background-radius: 10;" />
+      <Button layoutX="203.0" layoutY="434.0" mnemonicParsing="false" onAction="#save" prefHeight="46.0" prefWidth="146.0" style="-fx-background-radius: 15; -fx-background-color: black; -fx-border-color: white; -fx-border-radius: 15;" text="GUARDAR" textFill="#57cbab">
          <font>
             <Font name="System Bold" size="19.0" />
          </font>
