--- a/src/ui/game-pain.fxml
+++ b/src/ui/game-pain.fxml
@@ -2,19 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="552.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="705.0" fitWidth="559.0" layoutX="-1.0" opacity="0.5" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Escritorio/Universidad/Tercer%20Semestre/APO%202/Space%20invaders/Fondo_Negro.png" />
-         </image>
-      </ImageView>
+      <ImageView fitHeight="705.0" fitWidth="559.0" layoutX="-1.0" opacity="0.5" pickOnBounds="true" preserveRatio="true" />
       <Button layoutX="211.0" layoutY="409.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="129.0" style="-fx-background-color: black; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15;" text="Aceptar" textFill="#57cbab">
          <font>
             <Font size="25.0" />
