--- a/src/ui/hallOfFame.fxml
+++ b/src/ui/hallOfFame.fxml
@@ -8,10 +8,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="552.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="862.0" fitWidth="562.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="paneHall" fitHeight="862.0" fitWidth="562.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../Downloads/fondos.png" />
          </image>
@@ -28,5 +27,6 @@
             <Font name="Malgun Gothic Bold" size="20.0" />
          </font>
       </Button>
+      <ImageView fx:id="lblHall" fitHeight="382.0" fitWidth="541.0" layoutX="26.0" layoutY="-58.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </Pane>
