--- a/src/ui/game-pain.fxml
+++ b/src/ui/game-pain.fxml
@@ -8,7 +8,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="552.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="705.0" fitWidth="559.0" layoutX="-1.0" opacity="0.5" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imageBackGround" fitHeight="705.0" fitWidth="559.0" layoutX="-1.0" opacity="0.5" pickOnBounds="true" preserveRatio="true" />
       <Button layoutX="211.0" layoutY="409.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="129.0" style="-fx-background-color: black; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15;" text="Aceptar" textFill="#57cbab">
          <font>
             <Font size="25.0" />
