--- a/src/ui/startGame.fxml
+++ b/src/ui/startGame.fxml
@@ -9,11 +9,11 @@
    <children>
       <ImageView fx:id="paneStart" fitHeight="717.0" fitWidth="562.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="lblStart" fitHeight="487.0" fitWidth="754.0" layoutX="-44.0" layoutY="-130.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="161.0" layoutY="353.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="240.0" style="-fx-background-color: black;" text="Scores" textFill="#57cbab">
+      <Button layoutX="161.0" layoutY="353.0" mnemonicParsing="false" onAction="#btnScores" prefHeight="57.0" prefWidth="240.0" style="-fx-background-color: black; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15;" text="Scores" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="25.0" />
          </font></Button>
-      <Button fx:id="btnScores1" layoutX="161.0" layoutY="262.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="240.0" style="-fx-background-color: black;" text="Iniciar Partida" textFill="#57cbab">
+      <Button layoutX="161.0" layoutY="262.0" mnemonicParsing="false" onAction="#btnStartGame" prefHeight="57.0" prefWidth="240.0" style="-fx-background-color: black; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15;" text="Iniciar Partida" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="25.0" />
          </font>
