--- a/src/ui/hallOfFame.fxml
+++ b/src/ui/hallOfFame.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -22,10 +23,13 @@
             <TableColumn prefWidth="158.0" text="Nivel" />
         </columns>
       </TableView>
-      <Button layoutX="224.0" layoutY="623.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="115.0" style="-fx-background-color: black;" text="ATRÁS" textFill="#57cbab">
+      <Button layoutX="224.0" layoutY="623.0" mnemonicParsing="false" onAction="#loadBanner" prefHeight="48.0" prefWidth="115.0" style="-fx-background-color: black;" text="ATRÁS" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="20.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
       <ImageView fx:id="lblHall" fitHeight="382.0" fitWidth="541.0" layoutX="26.0" layoutY="-58.0" pickOnBounds="true" preserveRatio="true" />
    </children>
