--- a/src/ui/startGame.fxml
+++ b/src/ui/startGame.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -12,11 +13,17 @@
       <Button layoutX="161.0" layoutY="353.0" mnemonicParsing="false" onAction="#btnScores" prefHeight="57.0" prefWidth="240.0" style="-fx-background-color: black; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15;" text="Scores" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="25.0" />
-         </font></Button>
+         </font>
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor></Button>
       <Button layoutX="161.0" layoutY="262.0" mnemonicParsing="false" onAction="#btnStartGame" prefHeight="57.0" prefWidth="240.0" style="-fx-background-color: black; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15;" text="Iniciar Partida" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="25.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
    </children>
 </Pane>
