--- a/src/ui/hallOfFame.fxml
+++ b/src/ui/hallOfFame.fxml
@@ -4,18 +4,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="552.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fx:id="paneHall" fitHeight="862.0" fitWidth="562.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Downloads/fondos.png" />
-         </image>
-      </ImageView>
+      <ImageView fx:id="paneHall" fitHeight="862.0" fitWidth="562.0" pickOnBounds="true" preserveRatio="true" />
       <TableView fx:id="tvHall" layoutX="50.0" layoutY="210.0" prefHeight="382.0" prefWidth="464.0" style="-fx-background-color: #042326;">
         <columns>
           <TableColumn prefWidth="195.0" text="Nombre" />
