--- a/src/ui/searchPlayers.fxml
+++ b/src/ui/searchPlayers.fxml
@@ -2,34 +2,16 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="552.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="756.0" fitWidth="562.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Downloads/Buscar.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="320.0" fitWidth="581.0" layoutX="68.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Downloads/tituloBuscar.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="450.0" fitWidth="926.0" layoutX="-119.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Downloads/nickPlayer.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="431.0" fitWidth="761.0" layoutX="-99.0" layoutY="215.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Downloads/puntaje.png" />
-         </image>
-      </ImageView>
+      <ImageView fx:id="paneSearch" fitHeight="756.0" fitWidth="562.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="titleSearch" fitHeight="320.0" fitWidth="581.0" layoutX="68.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="addNIck" fitHeight="450.0" fitWidth="926.0" layoutX="-119.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="addScore" fitHeight="431.0" fitWidth="761.0" layoutX="-99.0" layoutY="215.0" pickOnBounds="true" preserveRatio="true" />
       <TextField alignment="CENTER" layoutX="127.0" layoutY="313.0" prefHeight="39.0" prefWidth="307.0" promptText="NickName">
          <font>
             <Font name="Bodoni MT" size="17.0" />
