--- a/src/ui/hallOfFame.fxml
+++ b/src/ui/hallOfFame.fxml
@@ -18,7 +18,7 @@
             <TableColumn prefWidth="129.0" text="Nivel" />
         </columns>
       </TableView>
-      <Button layoutX="224.0" layoutY="623.0" mnemonicParsing="false" onAction="#loadBanner" prefHeight="48.0" prefWidth="115.0" style="-fx-background-color: black;" text="INICIO" textFill="#57cbab">
+      <Button layoutX="115.0" layoutY="623.0" mnemonicParsing="false" onAction="#loadBanner" prefHeight="48.0" prefWidth="115.0" style="-fx-background-color: black;" text="INICIO" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="20.0" />
          </font>
@@ -27,5 +27,13 @@
          </cursor>
       </Button>
       <ImageView fx:id="lblHall" fitHeight="382.0" fitWidth="541.0" layoutX="26.0" layoutY="-58.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="313.0" layoutY="623.0" mnemonicParsing="false" onAction="#searchPlayers" prefHeight="48.0" prefWidth="115.0" style="-fx-background-color: black;" text="BUSCAR" textFill="#57cbab">
+         <font>
+            <Font name="Malgun Gothic Bold" size="20.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </Pane>
