--- a/src/ui/real-name.fxml
+++ b/src/ui/real-name.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="552.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -10,5 +13,21 @@
       <ImageView fx:id="addRealName" fitHeight="518.0" fitWidth="888.0" layoutX="-168.0" layoutY="58.0" pickOnBounds="true" preserveRatio="true" />
       <TextField layoutX="125.0" layoutY="326.0" prefHeight="37.0" prefWidth="302.0" />
       <ImageView fx:id="titleRealName" fitHeight="384.0" fitWidth="653.0" layoutX="17.0" layoutY="-39.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="125.0" layoutY="394.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="138.0" style="-fx-background-color: BLACK;" text="CONTINUAR" textFill="#57cbab">
+         <font>
+            <Font name="Malgun Gothic Bold" size="17.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button layoutX="303.0" layoutY="394.0" mnemonicParsing="false" onAction="#loadBanner" prefHeight="48.0" prefWidth="124.0" style="-fx-background-color: BLACK;" text="ATRÁS" textFill="#57cbab">
+         <font>
+            <Font name="Malgun Gothic Bold" size="17.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </Pane>
