--- a/src/ui/searchPlayers.fxml
+++ b/src/ui/searchPlayers.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
@@ -26,11 +27,17 @@
          <font>
             <Font name="Malgun Gothic Bold" size="17.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
-      <Button layoutX="296.0" layoutY="533.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="117.0" style="-fx-background-color: black;" text="CANCELAR" textFill="#57cbab">
+      <Button layoutX="296.0" layoutY="533.0" mnemonicParsing="false" onAction="#btnScores" prefHeight="48.0" prefWidth="117.0" style="-fx-background-color: black;" text="CANCELAR" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="16.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
    </children>
 </Pane>
