--- a/src/ui/real-name.fxml
+++ b/src/ui/real-name.fxml
@@ -13,7 +13,7 @@
       <ImageView fx:id="addRealName" fitHeight="518.0" fitWidth="888.0" layoutX="-168.0" layoutY="58.0" pickOnBounds="true" preserveRatio="true" />
       <TextField layoutX="125.0" layoutY="326.0" prefHeight="37.0" prefWidth="302.0" />
       <ImageView fx:id="titleRealName" fitHeight="384.0" fitWidth="653.0" layoutX="17.0" layoutY="-39.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="125.0" layoutY="394.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="138.0" style="-fx-background-color: BLACK;" text="CONTINUAR" textFill="#57cbab">
+      <Button layoutX="125.0" layoutY="394.0" mnemonicParsing="false" onAction="#btnStartGame" prefHeight="48.0" prefWidth="138.0" style="-fx-background-color: BLACK;" text="CONTINUAR" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="17.0" />
          </font>
