--- a/src/ui/startGame.fxml
+++ b/src/ui/startGame.fxml
@@ -17,7 +17,7 @@
          <cursor>
             <Cursor fx:constant="OPEN_HAND" />
          </cursor></Button>
-      <Button layoutX="161.0" layoutY="262.0" mnemonicParsing="false" onAction="#btnStartGame" prefHeight="57.0" prefWidth="240.0" style="-fx-background-color: black; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15;" text="Iniciar Partida" textFill="#57cbab">
+      <Button layoutX="161.0" layoutY="262.0" mnemonicParsing="false" onAction="#addRealName" prefHeight="57.0" prefWidth="240.0" style="-fx-background-color: black; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15;" text="Iniciar Partida" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="25.0" />
          </font>
