--- a/src/ui/gameover-pane.fxml
+++ b/src/ui/gameover-pane.fxml
@@ -24,7 +24,7 @@
       </Label>
       <ImageView fx:id="insertName" fitHeight="523.0" fitWidth="896.0" layoutX="-172.0" layoutY="89.0" pickOnBounds="true" preserveRatio="true" />
       <TextField fx:id="nickName" layoutX="126.0" layoutY="367.0" prefHeight="30.0" prefWidth="301.0" style="-fx-background-radius: 10;" />
-      <Button layoutX="203.0" layoutY="434.0" mnemonicParsing="false" onAction="#loadBanner" prefHeight="46.0" prefWidth="146.0" style="-fx-background-radius: 15; -fx-background-color: black; -fx-border-color: white; -fx-border-radius: 15;" text="GUARDAR" textFill="#57cbab">
+      <Button layoutX="203.0" layoutY="434.0" mnemonicParsing="false" onAction="#loadPlayers" prefHeight="46.0" prefWidth="146.0" style="-fx-background-radius: 15; -fx-background-color: black; -fx-border-color: white; -fx-border-radius: 15;" text="GUARDAR" textFill="#57cbab">
          <font>
             <Font name="System Bold" size="19.0" />
          </font>
