--- a/src/ui/hallOfFame.fxml
+++ b/src/ui/hallOfFame.fxml
@@ -11,14 +11,14 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="552.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="paneHall" fitHeight="862.0" fitWidth="562.0" pickOnBounds="true" preserveRatio="true" />
-      <TableView fx:id="tvHall" layoutX="50.0" layoutY="210.0" prefHeight="382.0" prefWidth="464.0" style="-fx-background-color: #042326;">
+      <TableView fx:id="tvHall" layoutX="49.0" layoutY="186.0" prefHeight="382.0" prefWidth="464.0" style="-fx-background-color: #042326;">
         <columns>
           <TableColumn fx:id="tcName" prefWidth="195.0" text="Nombre" />
           <TableColumn fx:id="tcScore" prefWidth="139.0" text="Score" />
             <TableColumn fx:id="tcLevel" prefWidth="129.0" text="Nivel" />
         </columns>
       </TableView>
-      <Button layoutX="115.0" layoutY="623.0" mnemonicParsing="false" onAction="#loadBanner" prefHeight="48.0" prefWidth="115.0" style="-fx-background-color: black;" text="INICIO" textFill="#57cbab">
+      <Button layoutX="224.0" layoutY="577.0" mnemonicParsing="false" onAction="#loadBanner" prefHeight="48.0" prefWidth="115.0" style="-fx-background-color: black;" text="INICIO" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="20.0" />
          </font>
@@ -26,8 +26,24 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <ImageView fx:id="lblHall" fitHeight="382.0" fitWidth="541.0" layoutX="26.0" layoutY="-58.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="313.0" layoutY="623.0" mnemonicParsing="false" onAction="#searchPlayers" prefHeight="48.0" prefWidth="115.0" style="-fx-background-color: black;" text="BUSCAR" textFill="#57cbab">
+      <ImageView fx:id="lblHall" fitHeight="382.0" fitWidth="541.0" layoutX="26.0" layoutY="-69.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="154.0" layoutY="635.0" mnemonicParsing="false" onAction="#searchPlayers" prefHeight="48.0" prefWidth="255.0" style="-fx-background-color: black;" text="BUSCAR O ELIMINAR" textFill="#57cbab">
+         <font>
+            <Font name="Malgun Gothic Bold" size="20.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button layoutX="58.0" layoutY="577.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="137.0" style="-fx-background-color: black;" text="IMPORTAR" textFill="#57cbab">
+         <font>
+            <Font name="Malgun Gothic Bold" size="20.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button layoutX="365.0" layoutY="577.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="137.0" style="-fx-background-color: black;" text="EXPORTAR" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="20.0" />
          </font>
