--- a/src/ui/searchPlayers.fxml
+++ b/src/ui/searchPlayers.fxml
@@ -23,7 +23,7 @@
             <Font name="Bodoni MT" size="17.0" />
          </font>
       </TextField>
-      <Button layoutX="136.0" layoutY="533.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="117.0" style="-fx-background-color: BLACK;" text="BUSCAR" textFill="#57cbab">
+      <Button layoutX="127.0" layoutY="533.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="117.0" style="-fx-background-color: BLACK;" text="BUSCAR" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="17.0" />
          </font>
@@ -31,7 +31,15 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button layoutX="296.0" layoutY="533.0" mnemonicParsing="false" onAction="#btnScores" prefHeight="48.0" prefWidth="117.0" style="-fx-background-color: black;" text="CANCELAR" textFill="#57cbab">
+      <Button layoutX="296.0" layoutY="533.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="117.0" style="-fx-background-color: black;" text="ELIMINAR" textFill="#57cbab">
+         <font>
+            <Font name="Malgun Gothic Bold" size="16.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button layoutX="218.0" layoutY="598.0" mnemonicParsing="false" onAction="#btnScores" prefHeight="48.0" prefWidth="117.0" style="-fx-background-color: black;" text="CANCELAR" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="16.0" />
          </font>
