--- a/src/ui/game-pane.fxml
+++ b/src/ui/game-pane.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="705.0" prefWidth="552.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#moveShip" prefHeight="705.0" prefWidth="552.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="imageBackGround" fitHeight="705.0" fitWidth="559.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="mainShip" fitHeight="84.0" fitWidth="114.0" layoutX="222.0" layoutY="607.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="alien1" fitHeight="62.0" fitWidth="71.0" layoutX="92.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="250.0" layoutY="353.0" mnemonicParsing="false" opacity="0.0" text="Button" />
    </children>
 </Pane>
