--- a/src/ui/game-pane.fxml
+++ b/src/ui/game-pane.fxml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#moveShip" prefHeight="705.0" prefWidth="552.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -10,5 +14,24 @@
       <ImageView fx:id="mainShip" fitHeight="84.0" fitWidth="114.0" layoutX="222.0" layoutY="607.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="alien1" fitHeight="62.0" fitWidth="71.0" layoutX="92.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true" />
       <Button layoutX="250.0" layoutY="353.0" mnemonicParsing="false" opacity="0.0" text="Button" />
+      <Circle fx:id="circle" disable="true" fill="WHITE" layoutX="269.0" layoutY="607.0" radius="10.0" stroke="BLACK" strokeType="INSIDE" />
+      <Button alignment="CENTER" layoutX="409.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadBanner" prefHeight="33.0" prefWidth="129.0" style="-fx-background-color: BLACK;" text="ABANDONAR" textFill="#57cbab">
+         <font>
+            <Font name="Malgun Gothic Bold" size="15.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor>
+      </Button>
+      <Label layoutX="199.0" layoutY="14.0" text="SCORE:" textFill="WHITE">
+         <font>
+            <Font name="Malgun Gothic Bold" size="23.0" />
+         </font>
+      </Label>
+      <Label fx:id="score" alignment="CENTER" layoutX="276.0" layoutY="14.0" prefHeight="33.0" prefWidth="52.0" text="0" textFill="WHITE">
+         <font>
+            <Font name="Malgun Gothic Bold" size="23.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
