--- a/src/ui/hallOfFame.fxml
+++ b/src/ui/hallOfFame.fxml
@@ -35,7 +35,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button layoutX="58.0" layoutY="577.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="137.0" style="-fx-background-color: black;" text="IMPORTAR" textFill="#57cbab">
+      <Button layoutX="58.0" layoutY="577.0" mnemonicParsing="false" onAction="#importData" prefHeight="48.0" prefWidth="137.0" style="-fx-background-color: black;" text="IMPORTAR" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="20.0" />
          </font>
@@ -43,7 +43,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button layoutX="365.0" layoutY="577.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="137.0" style="-fx-background-color: black;" text="EXPORTAR" textFill="#57cbab">
+      <Button layoutX="365.0" layoutY="577.0" mnemonicParsing="false" onAction="#exportData" prefHeight="48.0" prefWidth="137.0" style="-fx-background-color: black;" text="EXPORTAR" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="20.0" />
          </font>
