--- a/src/ui/searchPlayers.fxml
+++ b/src/ui/searchPlayers.fxml
@@ -23,7 +23,7 @@
             <Font name="Bodoni MT" size="17.0" />
          </font>
       </TextField>
-      <Button layoutX="127.0" layoutY="533.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="117.0" style="-fx-background-color: BLACK;" text="BUSCAR" textFill="#57cbab">
+      <Button layoutX="127.0" layoutY="533.0" mnemonicParsing="false" onAction="#searchPlayer" prefHeight="48.0" prefWidth="117.0" style="-fx-background-color: BLACK;" text="BUSCAR" textFill="#57cbab">
          <font>
             <Font name="Malgun Gothic Bold" size="17.0" />
          </font>
