--- a/src/ui/game-pane.fxml
+++ b/src/ui/game-pane.fxml
@@ -37,7 +37,7 @@
             <Font name="Malgun Gothic Bold" size="23.0" />
          </font>
       </Label>
-      <Label fx:id="score1" alignment="CENTER" layoutX="81.0" layoutY="14.0" prefHeight="33.0" prefWidth="52.0" text="0" textFill="WHITE">
+      <Label fx:id="level" alignment="CENTER" layoutX="81.0" layoutY="14.0" prefHeight="33.0" prefWidth="52.0" text="0" textFill="WHITE">
          <font>
             <Font name="Malgun Gothic Bold" size="23.0" />
          </font>
