--- a/src/ui/gameover-pane.fxml
+++ b/src/ui/gameover-pane.fxml
@@ -17,7 +17,7 @@
             <Font name="System Bold" size="31.0" />
          </font>
       </Label>
-      <Label layoutX="297.0" layoutY="245.0" text="000" textFill="WHITE">
+      <Label fx:id="scoreOver" layoutX="300.0" layoutY="244.0" text="000" textFill="WHITE">
          <font>
             <Font name="System Bold" size="31.0" />
          </font>
