Already almost all

--- a/src/ui/selectShip-pane.fxml
+++ b/src/ui/selectShip-pane.fxml
@@ -18,7 +18,7 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></ImageView>
-      <Label layoutX="166.0" layoutY="379.0" prefHeight="79.0" prefWidth="70.0" text="Vidas: 1" textAlignment="RIGHT" textFill="WHITE" wrapText="true">
+      <Label layoutX="-15.0" layoutY="366.0" prefHeight="79.0" prefWidth="262.0" text="Velocidad de movimiento: normal" textAlignment="RIGHT" textFill="WHITE" wrapText="true">
          <font>
             <Font name="System Bold" size="22.0" />
          </font>
@@ -34,7 +34,7 @@
          </font>
       </Label>
       <ComboBox fx:id="comboBoxDificult" layoutX="191.0" layoutY="519.0" prefWidth="150.0" />
-      <Label layoutX="279.0" layoutY="379.0" prefHeight="79.0" prefWidth="70.0" text="Vidas: 2" textAlignment="RIGHT" textFill="WHITE" wrapText="true">
+      <Label layoutX="287.0" layoutY="366.0" prefHeight="79.0" prefWidth="262.0" text="Velocidad de movimiento: Muy alta" textFill="WHITE" wrapText="true">
          <font>
             <Font name="System Bold" size="22.0" />
          </font>
